--- a/django-is-panther/whereswatson/templates/core/index.html
+++ b/django-is-panther/whereswatson/templates/core/index.html
@@ -1,1 +1,20 @@
-"This is my index.html template"
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type"text/css" href="{% static '/css/styles.css' %} ">
+    <title>Watson</title>
+</head>
+<body>
+    
+<h2>Is Watson a Panther?</h2>
+
+<div id="answer">{{ answer }}</div>
+</body>
+</html>
+
+
